style.css
body {
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 5fr;
  min-height: 100vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  box-sizing: border-box;
}

.header {
  box-shadow: 0px 5px 15px gray;
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 2;
  padding: 15px;
  position: relative;
}

.greeting-container:last-child p {
  font-weight: 700;
}

.search-container {
  display: grid;
  grid-template-columns: 6fr 2fr;
  align-items: center;
}

input {
  padding: 5px 8px;
  border-radius: 16px;
  border: none;
  background-color: #e2e8f0;
  width: 80%;
}

.search-field {
  display: grid;
  align-items: center;
  grid-template-columns: 10% 5fr;
}

.search-field img {
  justify-self: center;
}

.notification-container {
  display: grid;
  justify-self: start;
  grid-template-columns: 20% 20% 60%;
  align-items: center;
  justify-items: center;
  gap: 15px;
}

.notification-container p {
  font-weight: 700;
}

img[src$=".svg"] {
  width: 30px;
}

input {
  justify-self: stretch;
}

.greeting-container {
  display: grid;
  grid-template-columns: 2fr 1fr;
  align-items: center;
}

.greeting-message {
  display: grid;
  grid-template-columns: 25% 40%;
  align-items: center;
}

#greeting-profile-picture {
  justify-self: start;
  margin-left: 40px;
}

.buttons {
  display: grid;
  grid-template-columns: 15% 15% 15%;
  align-items: center;
  justify-items: center;
  justify-content: center;
  gap: 40px;
}

.welcome-message {
  display: grid;
  grid-template-columns: 1fr 5fr;
  align-items: center;
}

.welcome-message p {
  margin-bottom: 0;
}

p + h2:last-child {
  margin-top: 0;
}

button {
  width: fit-content;
  padding: 10px 20px;
  border-radius: 16px;
  background-color: #1992d4;
  color: white;
  font-weight: 700;
  border: none;
}

.sidebar {
  background-color: #1992d4;
  grid-column: 1;
  grid-row: 1 / span 2;
  grid-template-rows: 10% 25% 20%;
  display: grid;
  color: white;
}

.sidebar > div {
  padding: 40px;
}

#dashboard-logo {
  display: grid;
  grid-template-columns: 30px auto;
  align-items: center;
  justify-items: center;
  gap: 15px;
}

#dashboard-logo > svg {
  width: 40px;
}

#project-header {
  grid-column: 1 / span 2;
  grid-row-start: 1;
}

#announcement-header {
  grid-row-start: 1;
  grid-column-start: 2;
}

#trending-header {
  grid-column-start: 2;
}

svg {
  fill: white;
  width: 25px;
}

.menu,
.settings {
  font-size: 1.3rem;
  font-weight: 500;
}

.menu > div,
.settings > div {
  margin-bottom: 10px;
  display: grid;
  align-items: center;
  grid-template-columns: 30px auto;
  gap: 15px;
}

.main {
  display: grid;
  grid-template-columns: 2fr 1fr;
  background-color: #e2e8f0;
  padding: 40px;
  column-gap: 40px;
}

.announcements {
  display: grid;
  grid-template-columns: 1fr;
  background-color: white;
  padding: 35px;
  border-radius: 10px;
  box-shadow: 0px 10px 15px grey;
}

.underline {
  border-bottom: 1px solid black;
}

.announcements h4 {
  margin-top: 0;
  margin-bottom: 0;
}

.announcements p {
  margin-top: 0;
  padding-bottom: 15px;
  font-weight: 100;
  color: grey;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  grid-row: 2 / span 3;
  gap: 50px;
}

.trending-profiles {
  display: grid;
  grid-column: 2;
  row-gap: 10px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 0px 10px 15px grey;
  padding: 15px;
}

.trending-profiles img {
  width: 50px;
  border-radius: 60%;
  box-shadow: 0px 10px 15px grey;
}

.user {
  display: grid;
  grid-template-columns: 2fr 3fr;
  align-items: center;
  justify-items: center;
}

.user-info > p:last-child {
  color: grey;
}

.user-info {
  justify-self: start;
}

.user-info > p {
  margin: 5px;
}

.project > h3,
.project > p {
  grid-column: span 2;
}

.project-options {
  grid-column: 2;
  justify-self: end;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 10px;
}

.project {
  border-left: 10px solid black;
  border-radius: 10px;
  background-color: white;
  padding: 20px;
  box-shadow: 0px 10px 15px grey;

  display: grid;
  grid-template-columns: 1fr 2fr;
}

.project h3,
.project p {
  margin: 0px 0px 5px 0px;
}

.search-container > img {
  width: 30px;
}

.search-container > p {
  font-weight: 800;
}

#login-profile-picture {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.welcome-message > img:first-child {
  width: 60px;
  height: 60px;
  border-radius: 50%;
}

